# depir-impl

./: .gitignore  Cargo.toml  Readme.md
poly-batch-eval/: fp.h  kernel.cu  poly-batch-eval.vcxproj
src/: globals.rs  interpolate.rs  iters.rs  main.rs  params.rs
src/evaluation/: async_read.rs  disk_preevaluations.rs  eval.rs  mod.rs  prime_components.rs  ram_preevaluations.rs  zn.rs
src/rings/: base.rs  cyclotomic_cc.rs  cyclotomic_rns.rs  mod.rs  tensor.rs
src/rnsconv/: bgv_rescale.rs  lift.rs  mod.rs
