[package]
name = "depir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
append-only-vec = "0.1.2"
base64 = "0.21.2"
crossbeam = "0.8.2"
feanor-math = { version = "1.4.0", features = ["generic_tests"] }
rand = "0.8.5"

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Security"
]

[profile.profiling]
inherits = "bench"
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
